[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathutils"

version = "1.0.0"

authors = [
  { name="stephen", email="stpirpinias@gmail.com" },
]

description = "mathutils"

readme = "README.md"

requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.hatch.build.targets.wheel]
      packages = ["src/mathutils"]

license = "MIT"

[project.optional-dependencies]
dev = ["flake8", "hatch"]